test/errors/parsing/returnEmptyAndValue.chpl
proc foo() {
  return 1;
  return;
  return 2;
  return;
}
foo();
