test/errors/parsing/returnEmptyAndValue.1.good
returnEmptyAndValue.chpl:1: In function 'foo':
returnEmptyAndValue.chpl:2: error: Invalid mix of 'return's
returnEmptyAndValue.chpl:2: note: this one returns something
returnEmptyAndValue.chpl:3: note: this one does not return anything
